--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
         // Workspace Settings
 
     // virtual environments 中的 python 執行檔
-    "python.pythonPath": "C:\\Users\\yjche\\anaconda3\\envs\\venv_ds\\python.exe",
+    "python.pythonPath": "C:\\Users\\yjche\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
     // 可以設定你放全部的 venvs 環境的根目錄資料夾
     "python.venvPath": "C:\\Users\\yjche\\anaconda3\\envs\\venv_ds",
 
